--- a/html/cards.html
+++ b/html/cards.html
@@ -41,7 +41,7 @@
                 <div class="title-bar">
                     <span class="name">One with Nothing</span>
                     <span class="mana-cost">
-                        <img src="../svg/white-mana-pip.svg" />
+                        <img class="pip" src="../svg/black-mana-pip.svg" />
                     </span>
                 </div>
                 <img src="../art/one-with-nothing.webp" />
