--- a/html/cards.html
+++ b/html/cards.html
@@ -61,7 +61,10 @@
             <div class="card saga">
                 <div class="title-bar">
                     <span class="name">Kiora Bests the Sea God</span>
-                    <span class="mana-cost">{7}{U}{U}</span>
+                    <span class="mana-cost">
+                        <img src="../svg/generic-7-pip.svg" class="pip" /><img src="../svg/blue-mana-pip.svg"
+                            class="pip" /><img src="../svg/blue-mana-pip.svg" class="pip" />
+                    </span>
                 </div>
                 <div class="text-and-art">
                     <div class="text-box dense">
