--- a/html/cards.html
+++ b/html/cards.html
@@ -98,9 +98,41 @@
             <div class="card"></div>
         </div>
         <div class="card-row">
+            <div class="card normal">
+                <div class="title-bar">
+                    <span class="name">One with Nothing</span>
+                    <span class="mana-cost"><img class="pip" src="../svg/black-mana-pip.svg"></span>
+                </div>
+                <img src="../art/one-with-nothing.webp" />
+                <div class="type-bar">
+                    <span>Instant</span>
+                </div>
+                <div class="text-box">
+                    <p class="rules-text">Discard your hand.</p>
+                    <hr />
+                    <p class="flavor-text">When nothing remains, everything is equally possible.</p>
+                </div>
+
+                <span class="art-credits">John Doe</span>
+            </div>
             <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
+            <div class="card normal">
+                <div class="title-bar">
+                    <span class="name">Squirrel</span>
+                    <span class="mana-cost"></span>
+                </div>
+                <div class="art-placeholder"></div>
+                <div class="type-bar">
+                    <span class="color-indicator"><img class="pip" src="../svg/green-mana-pip.svg" /></span>
+                    <span>Creature &mdash;Squirrel</span>
+                </div>
+                <div class="text-box">
+                    <p class="rules-text">Token.</p>
+
+                </div>
+                <div class="corner-bubble">1/1</div>
+                <span class="art-credits">John Doe</span>
+            </div>
         </div>
         <div class="card-row">
             <div class="card"></div>
