--- a/cards.html
+++ b/cards.html
@@ -38,13 +38,13 @@
     <page>
         <div class="card-row">
             <div class="card normal">
-                <div class="title-bar">
+                <div class="title-bar legendary">
                     <span class="name">One with Nothing</span>
                     <span class="mana-cost">
-                        <img class="pip" src="../svg/black-mana-pip.svg" />
+                        <img class="pip" src="./svg/black-mana-pip.svg" />
                     </span>
                 </div>
-                <img src="../art/one-with-nothing.webp" />
+                <img src="./art/one-with-nothing.webp" />
                 <div class="type-bar">
                     <span>Instant</span>
                 </div>
@@ -59,11 +59,12 @@
                 <span class="art-credits">Joe R. Hacker</span>
             </div>
             <div class="card saga">
-                <div class="title-bar">
+                <div class="title-bar legendary">
                     <span class="name">Kiora Bests the Sea God</span>
                     <span class="mana-cost">
-                        <img src="../svg/generic-7-pip.svg" class="pip" /><img src="../svg/blue-mana-pip.svg"
-                            class="pip" /><img src="../svg/blue-mana-pip.svg" class="pip" />
+                        <img src="./svg/generic-7-pip.svg" class="pip" />
+                        <img src="./svg/blue-mana-pip.svg" class="pip" />
+                        <img src="./svg/blue-mana-pip.svg" class="pip" />
                     </span>
                 </div>
                 <div class="text-and-art">
@@ -88,7 +89,7 @@
                             Gain control of target permanent an opponent controls. Untap it.
                         </p>
                     </div>
-                    <img src="../art/kiora-bests-the-sea-god.png" />
+                    <img src="./art/kiora-bests-the-sea-god.png" />
                 </div>
                 <div class="type-bar">
                     <span>Enchantment &mdash; Saga</span>
@@ -101,9 +102,9 @@
             <div class="card normal">
                 <div class="title-bar">
                     <span class="name">One with Nothing</span>
-                    <span class="mana-cost"><img class="pip" src="../svg/black-mana-pip.svg"></span>
+                    <span class="mana-cost"><img class="pip" src="./svg/black-mana-pip.svg"></span>
                 </div>
-                <img src="../art/one-with-nothing.webp" />
+                <img src="./art/one-with-nothing.webp" />
                 <div class="type-bar">
                     <span>Instant</span>
                 </div>
@@ -123,7 +124,7 @@
                 </div>
                 <div class="art-placeholder"></div>
                 <div class="type-bar">
-                    <span class="color-indicator"><img class="pip" src="../svg/green-mana-pip.svg" /></span>
+                    <span class="color-indicator"><img class="pip" src="./svg/green-mana-pip.svg" /></span>
                     <span>Creature &mdash;Squirrel</span>
                 </div>
                 <div class="text-box">
