--- a/cards.html
+++ b/cards.html
@@ -1,37 +1,10 @@
 <html>
 
 <head>
-    <style media="screen, print">
-        @page {
-            size: A4 portrait;
-            padding: 11mm 9mm;
-        }
-
-        body {
-            padding: 0;
-            margin: 0;
-        }
-
-        page {
-            page-break-after: always;
-        }
-
-        .card-row {
-            margin-left: 8mm;
-            display: flex;
-            flex-direction: row;
-        }
-
-        .card-row:first-child {
-            margin-top: 11mm;
-        }
-    </style>
-
-    <link rel="stylesheet" href="./card.css" />
-    <link rel="stylesheet" href="./normal-card.css" />
-    <link rel="stylesheet" href="./saga-card.css" />
-
-    <link rel="stylesheet" href="./pips.css" />
+    <link rel="stylesheet" href="./css/page.css" />
+    <link rel="stylesheet" href="./css/card.css" />
+    <link rel="stylesheet" href="./css/normal-card.css" />
+    <link rel="stylesheet" href="./css/saga-card.css" />
 </head>
 
 <body>
@@ -41,7 +14,7 @@
                 <div class="title-bar legendary">
                     <span class="name">One with Nothing</span>
                     <span class="mana-cost">
-                        <img class="pip" src="./svg/black-mana-pip.svg" />
+                        <img class="pip" src="./svg/{B}.svg" />
                     </span>
                 </div>
                 <img src="./art/one-with-nothing.webp" />
@@ -62,9 +35,9 @@
                 <div class="title-bar legendary">
                     <span class="name">Kiora Bests the Sea God</span>
                     <span class="mana-cost">
-                        <img src="./svg/generic-7-pip.svg" class="pip" />
-                        <img src="./svg/blue-mana-pip.svg" class="pip" />
-                        <img src="./svg/blue-mana-pip.svg" class="pip" />
+                        <img src="./svg/{7}.svg" class="pip" />
+                        <img src="./svg/{U}.svg" class="pip" />
+                        <img src="./svg/{U}.svg" class="pip" />
                     </span>
                 </div>
                 <div class="text-and-art">
@@ -85,7 +58,7 @@
                         </p>
                         <hr />
                         <p class="step">
-                            <span class="hex">&#8546;</span>
+                            <span class="hex">&#8546;&#8547;</span>
                             Gain control of target permanent an opponent controls. Untap it.
                         </p>
                     </div>
@@ -102,7 +75,7 @@
             <div class="card normal">
                 <div class="title-bar">
                     <span class="name">One with Nothing</span>
-                    <span class="mana-cost"><img class="pip" src="./svg/black-mana-pip.svg"></span>
+                    <span class="mana-cost"><img class="pip" src="./svg/{B}.svg"></span>
                 </div>
                 <img src="./art/one-with-nothing.webp" />
                 <div class="type-bar">
@@ -124,7 +97,7 @@
                 </div>
                 <div class="art-placeholder"></div>
                 <div class="type-bar">
-                    <span class="color-indicator"><img class="pip" src="./svg/green-mana-pip.svg" /></span>
+                    <span class="color-indicator"><img class="pip" src="./svg/{G}.svg" /></span>
                     <span>Creature &mdash;Squirrel</span>
                 </div>
                 <div class="text-box">
@@ -153,7 +126,30 @@
             <div class="card"></div>
         </div>
         <div class="card-row">
-            <div class="card"></div>
+
+            <div class="card saga">
+                <div class="title-bar"><span class="name">Kiora Bests the Sea God</span><span class="mana-cost"><img
+                            class="pip" src="./svg/{7}.svg" /> <img class="pip" src="./svg/{U}.svg" /> <img class="pip"
+                            src="./svg/{U}.svg" /> </span></div>
+                <div class="text-and-art">
+                    <div class="text-box dense">
+                        <p class="reminder-text">As this Saga enters and after your draw step, add a lore counter.
+                            Sacrifice after Ⅲ</p>
+                        <hr />
+                        <p class="step"><span class="hex">Ⅰ</span> Create an 8/8 blue Kraken creature
+                            token with hexproof.</p>
+                        <hr />
+                        <p class="step"><span class="hex">Ⅱ</span> Tap all nonland permanents target opponent controls.
+                            They don't untap during their controller's next untap step.</p>
+                        <hr />
+                        <p class="step"><span class="hex">Ⅲ</span> Gain control of target permanent an opponent
+                            controls. Untap it.</p>
+                    </div>
+                    <img src="./art/kiora-bests-the-sea-god.png" />
+                </div>
+                <div class="type-bar"><span>Enchantment &mdash; Saga</span></div>
+                <span class="art-credits">John Doe</span>
+            </div>
             <div class="card"></div>
             <div class="card"></div>
         </div>
