--- a/example_cards.html
+++ b/example_cards.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -5,6 +6,8 @@
     <link rel="stylesheet" href="./css/card.css" />
     <link rel="stylesheet" href="./css/normal-card.css" />
     <link rel="stylesheet" href="./css/saga-card.css" />
+    <link rel="stylesheet" href="./css/flip-card.css" />
+    <link rel="stylesheet" href="./css/token-card.css" />
 </head>
 
 <body>
@@ -17,7 +20,7 @@
                         <img class="pip" src="./svg/{B}.svg" />
                     </span>
                 </div>
-                <img src="./art/one-with-nothing.webp" />
+                <img class="art" src="./art/one-with-nothing.webp" />
                 <div class="type-bar">
                     <span>Instant</span>
                 </div>
@@ -62,7 +65,7 @@
                             Gain control of target permanent an opponent controls. Untap it.
                         </p>
                     </div>
-                    <img src="./art/kiora-bests-the-sea-god.png" />
+                    <img class="art" src="./art/kiora-bests-the-sea-god.png" />
                 </div>
                 <div class="type-bar">
                     <span>Enchantment &mdash; Saga</span>
@@ -77,7 +80,7 @@
                     <span class="name">One with Nothing</span>
                     <span class="mana-cost"><img class="pip" src="./svg/{B}.svg"></span>
                 </div>
-                <img src="./art/one-with-nothing.webp" />
+                <img class="art" src="./art/one-with-nothing.webp" />
                 <div class="type-bar">
                     <span>Instant</span>
                 </div>
@@ -86,23 +89,21 @@
                     <hr />
                     <p class="flavor-text">When nothing remains, everything is equally possible.</p>
                 </div>
-
                 <span class="art-credits">John Doe</span>
             </div>
             <div class="card"></div>
-            <div class="card normal">
-                <div class="title-bar">
-                    <span class="name">Squirrel</span>
-                    <span class="mana-cost"></span>
-                </div>
+            <div class="card normal token">
+                <div class="title-bar"></div>
                 <div class="art-placeholder"></div>
                 <div class="type-bar">
                     <span class="color-indicator"><img class="pip" src="./svg/{G}.svg" /></span>
                     <span>Creature &mdash;Squirrel</span>
                 </div>
                 <div class="text-box">
-                    <p class="rules-text">Token.</p>
-
+                </div>
+                <div class="flipside">
+                    Legendary Enchantment
+                    <img class="pip" src="./svg/{W}.svg" />
                 </div>
                 <div class="corner-bubble">1/1</div>
                 <span class="art-credits">John Doe</span>
@@ -145,7 +146,7 @@
                         <p class="step"><span class="hex">Ⅲ</span> Gain control of target permanent an opponent
                             controls. Untap it.</p>
                     </div>
-                    <img src="./art/kiora-bests-the-sea-god.png" />
+                    <img class="art" src="./art/kiora-bests-the-sea-god.png" />
                 </div>
                 <div class="type-bar"><span>Enchantment &mdash; Saga</span></div>
                 <span class="art-credits">John Doe</span>
