--- a/testbed/test.html
+++ b/testbed/test.html
@@ -2,19 +2,20 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="card2.css">
+    <link rel="stylesheet" href="card.css">
+    <link rel="stylesheet" href="card-colors.css">
 </head>
 
 <body>
-    <div class="card">
-        <div class="content">
-            <div class="title bar">
-                <span class="name">Dungaree's Leekspin</span>
-            </div>
+    <div class="card gold">
+        <div class="title bar">
+            <span class="name">Dungaree's Leekspin</span>
         </div>
-        <div class="landscape-art"></div>
+        <div class="art"></div>
+        <div class="type-line bar"></div>
+        <div class="text-box"></div>
+        <span class="art-credits">goopqj</span>
     </div>
-
 </body>
 
 </html>
