--- a/testbed/test.html
+++ b/testbed/test.html
@@ -12,8 +12,17 @@
             <span class="name">Dungaree's Leekspin</span>
         </div>
         <div class="art"></div>
-        <div class="type-line bar"></div>
-        <div class="text-box"></div>
+        <div class="type-line bar">
+            <span class="type">
+                Cool Trick &mdash; Very Nice
+            </span>
+        </div>
+        <div class="text-box sparse">
+            <p class="rules-text">Tickle target opponent.</p>
+            <hr />
+            <p class="flavor-text">Mama Mia that's a spicy meatball.</p>
+        </div>
+        <div class="bar corner-bubble spiky"><span>1/1</span></div>
         <span class="art-credits">goopqj</span>
     </div>
 </body>
