--- a/testbed/test.html
+++ b/testbed/test.html
@@ -11,18 +11,18 @@
         <div class="title bar">
             <span class="name">Dungaree's Leekspin</span>
         </div>
-        <div class="art"></div>
-        <div class="type-line bar">
+        <div class="art vertical left"></div>
+        <div class="type-line bar bottom">
             <span class="type">
                 Cool Trick &mdash; Very Nice
             </span>
         </div>
-        <div class="text-box sparse">
+        <div class="text-box sparse vertical right">
             <p class="rules-text">Tickle target opponent.</p>
             <hr />
             <p class="flavor-text">Mama Mia that's a spicy meatball.</p>
         </div>
-        <div class="bar corner-bubble spiky"><span>1/1</span></div>
+        <div class="bar corner-bubble"><span>1/1</span></div>
         <span class="art-credits">goopqj</span>
     </div>
 </body>
