--- a/testbed/test.html
+++ b/testbed/test.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <div class="card gold">
+    <div class="card gold red-blue-pins">
         <div class="title bar">
             <span class="name">Dungaree's Leekspin</span>
         </div>
