--- a/testbed/test.html
+++ b/testbed/test.html
@@ -7,22 +7,27 @@
 </head>
 
 <body>
-    <div class="card gold red-blue-pins">
-        <div class="title bar">
-            <span class="name">Dungaree's Leekspin</span>
+    <div class="card red">
+        <div class="title bar reverse">
+            <span class="name">Lenna</span>
         </div>
-        <div class="art vertical left"></div>
-        <div class="type-line bar bottom">
+        <div class="art"></div>
+        <div class="type-line bar">
             <span class="type">
-                Cool Trick &mdash; Very Nice
+                Creature &mdash; Dame
             </span>
         </div>
-        <div class="text-box sparse vertical right">
-            <p class="rules-text">Tickle target opponent.</p>
+        <div class="text-box sparse">
+            <!-- <p class="rules-text">Get shit on you no bitches having loser, it's my turn to play the card game and your
+                turn to sit there lime a dumbass. Also, I get to draw a card</p> -->
+            <p class="rules-text">Commit a felony.</p>
             <hr />
-            <p class="flavor-text">Mama Mia that's a spicy meatball.</p>
+            <p class="flavor-text">&mdash; MaldHound</p>
         </div>
         <div class="bar corner-bubble"><span>1/1</span></div>
+        <div class="bar flip-indicator reverse"><span>
+                Cool Trick &mdash; Very Nice
+            </span></div>
         <span class="art-credits">goopqj</span>
     </div>
 </body>
