--- a/testbed/test.html
+++ b/testbed/test.html
@@ -18,9 +18,8 @@
             </span>
         </div>
         <div class="text-box sparse">
-            <!-- <p class="rules-text">Get shit on you no bitches having loser, it's my turn to play the card game and your
-                turn to sit there lime a dumbass. Also, I get to draw a card</p> -->
-            <p class="rules-text">Commit a felony.</p>
+            <p class="rules-text">Get shit on you no bitches having loser, it's my turn to play the card game and your
+                turn to sit there lime a dumbass. Also, I get to draw a card</p>
             <hr />
             <p class="flavor-text">&mdash; MaldHound</p>
         </div>
