--- a/examples/card-examples.html
+++ b/examples/card-examples.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <page>
+    <div class="page">
         <div class="card-row">
             <div class="card red">
                 <div class="title bar">
@@ -208,5 +208,5 @@
                 <span class="art-credits">goopqj</span>
             </div>
         </div>
-    </page>
+    </div>
 </body>
