--- a/examples/test-cards.html
+++ b/examples/test-cards.html
@@ -16,7 +16,7 @@
 </header>
 
 <body>
-    <page>
+    <div class="page">
         <div class="card-row">
             <div class="card"></div>
             <div class="card"></div>
@@ -32,7 +32,24 @@
             <div class="card"></div>
             <div class="card"></div>
         </div>
-    </page>
+    </div>
+    <div class="page">
+        <div class="card-row">
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+        </div>
+        <div class="card-row">
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+        </div>
+        <div class="card-row">
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+        </div>
+    </div>
 </body>
 
 </html>
